objects/Account.object
<CustomObject>
    <fields>
        <fullName>Legal_Region__c</fullName>
        <description>Contains regions used in Account Legal Content.</description>
        <label>Region</label>
        <picklist>
            <picklistValues>
                <fullName>Asia Pacific</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EMEA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>India</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Japan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>North America</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Longitude__c</fullName>
        <label>Longitude</label>
        <precision>18</precision>
        <scale>15</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Merge__c</fullName>
        <formula>HYPERLINK(&quot;apex/dupe_eliminator__SearchMerge?find=true&amp;object=Account&amp;field1=Name&amp;op1=contains&amp;value1=&quot;+Name+&quot;&amp;field2=RecordTypeId&amp;op2=equals&amp;value2=&quot;+  $RecordType.Name +&quot;&amp;limit=15&amp;hideFilter=0&amp;hideHeader=0&amp;hideSidebar=1&quot;  , IMAGE (&quot;/resource/Merge_Button_Image&quot;, &quot;Merge&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Merge</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mod_CT_Flag__c</fullName>
        <defaultValue>false</defaultValue>
        <description>S_ADDR_ORG_X.ATTRIB_52</description>
        <label>Mod CT Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>New_GSS_Index_Ref__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>New GSS Index</label>
        <referenceTo>GSS_Index__c</referenceTo>
        <relationshipLabel>Accounts (New GSS Index)</relationshipLabel>
        <relationshipName>Accounts1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>New_GSS_Index__c</fullName>
        <label>New GSS Index Obsolete</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>No_Domain_Expiration_Mail__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Restrict DBE Expiration Notification Email</description>
        <inlineHelpText>Restrict DBE Expiration Notification Email</inlineHelpText>
        <label>No Domain Expiration Mail</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Old_Opps_Index__c</fullName>
        <description>S_ADDR_ORG_X.ATTRIB_01</description>
        <label>Old Opps Index</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Operations_Name__c</fullName>
        <formula>GSS_Index__r.GSS_Index__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Operations Name/Index</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Original_System__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Original System</label>
        <referenceTo>Original_System__c</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Parent_Account_Name__c</fullName>
        <formula>Parent.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Parent Account Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent_Account_Number__c</fullName>
        <formula>Parent.Account_Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Parent Account Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent_Account_Support_Level__c</fullName>
        <formula>TEXT(Parent.Support_Level__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Parent Account Support Level</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent_Account_Type__c</fullName>
        <formula>Text(Parent.Type)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent_Account__c</fullName>
        <formula>Parent.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Parent Account</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent_Site_Id__c</fullName>
        <label>Parent Row Id</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Partner_Flag__c</fullName>
        <defaultValue>false</defaultValue>
        <description>S_ORG_EXT.PRTNR_FLG</description>
        <label>Partner Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Payment_Terms__c</fullName>
        <label>Payment Terms</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Net 30</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>NE 30</fullName>
                </value>
                <value>
                    <fullName>Net 45</fullName>
                </value>
                <value>
                    <fullName>Net 60</fullName>
                </value>
                <value>
                    <fullName>NE 60</fullName>
                </value>
                <value>
                    <fullName>Net 90</fullName>
                </value>
                <value>
                    <fullName>NE 90</fullName>
                </value>
                <value>
                    <fullName>Net 120</fullName>
                </value>
                <value>
                    <fullName>PIA 0</fullName>
                </value>
                <value>
                    <fullName>PIA 30</fullName>
                </value>
                <value>
                    <fullName>PIA 90</fullName>
                </value>
                <value>
                    <fullName>PIA 180</fullName>
                </value>
                <value>
                    <fullName>Others/Non-Standard</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Postal_Code__c</fullName>
        <label>Postal Code</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>comment: removed this condition on 5Feb2013
 (Primary Account: StatusNOT EQUAL TOInactive)</description>
        <label>Primary Account</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1 OR 2 OR 3 OR 4 OR 5</booleanFilter>
            <errorMessage>Value does not exist or does not match filter criteria.
(Primary Account)</errorMessage>
            <filterItems>
                <field>Account.ParentId</field>
                <operation>equals</operation>
                <valueField>$Source.Id</valueField>
            </filterItems>
            <filterItems>
                <field>$Profile.Name</field>
                <operation>equals</operation>
                <value>Integration</value>
            </filterItems>
            <filterItems>
                <field>$User.LastName</field>
                <operation>equals</operation>
                <value>MIgration</value>
            </filterItems>
            <filterItems>
                <field>$Profile.Name</field>
                <operation>equals</operation>
                <value>5_1 - Data Steward</value>
            </filterItems>
            <filterItems>
                <field>$Source.ByPass_Lookup_Filters__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Accounts (Primary Account)</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Primary_Partner_Upsert_Key__c</fullName>
        <formula>Id + &apos;_&apos; +  Primary_Partner__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Primary Partner Upsert Key</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Partner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Primary Partner</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1 OR 2 OR 3</booleanFilter>
            <errorMessage>Value does not exist or does not match filter criteria.
(Primary Partner)</errorMessage>
            <filterItems>
                <field>Account.Status__c</field>
                <operation>notEqual</operation>
                <value>Inactive</value>
            </filterItems>
            <filterItems>
                <field>$Profile.Name</field>
                <operation>equals</operation>
                <value>5_1 - Data Steward</value>
            </filterItems>
            <filterItems>
                <field>$Source.ByPass_Lookup_Filters__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Accounts (Primary Partner)</relationshipLabel>
        <relationshipName>Accounts2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Prior_GSS_Event__c</fullName>
        <label>Prior GSS Event</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Rec_Credit_Limit__c</fullName>
        <defaultValue>100000</defaultValue>
        <label>Rec Credit Limit</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Rec_Risk_Rating__c</fullName>
        <label>Rec Risk Rating</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>A</fullName>
                </value>
                <value>
                    <fullName>B</fullName>
                </value>
                <value>
                    <fullName>C</fullName>
                </value>
                <value>
                    <fullName>D</fullName>
                </value>
                <value>
                    <fullName>E</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>F</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Ref_Key_Prefix__c</fullName>
        <label>Ref Key Prefix</label>
        <length>5</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <description>S_ORG_EXT.REGION</description>
        <label>Region</label>
        <picklist>
            <picklistValues>
                <fullName>North America</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Europe</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Asia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Latin America</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Related_Parties_List__c</fullName>
        <description>Contains the names of the parties related to a Parent Account - SFDC-2884 (Feb 16 Rel)</description>
        <label>Related Parties List</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Restricted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Restricted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Row_Id_Transition__c</fullName>
        <description>Added For Flexibility for DownStream Integrations</description>
        <formula>IF( isMigrated_Record__c , Row_Id__c, Account_Number__c  )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Row Id Transition</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Row_Id__c</fullName>
        <description>S_ORG_EXT.ROW_ID</description>
        <externalId>true</externalId>
        <label>Row Id</label>
        <length>15</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>SAP_Customer_ID_Mask__c</fullName>
        <formula>TEXT( ROUND(  VALUE( SAP_Customer_Id__c )  ,0))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SAP Customer #</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SAP_Customer_Id__c</fullName>
        <externalId>true</externalId>
        <label>SAP Customer Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SAP_Inactivate__c</fullName>
        <defaultValue>false</defaultValue>
        <label>SAP Inactivate</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SAP_Response_Time__c</fullName>
        <label>SAP Response Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>SAP_Response__c</fullName>
        <label>SAP Response</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SAP_Sold_To_Customer_Id__c</fullName>
        <description>S_ADDR_ORG.S_ADDR_ORG.X_SAP_CUSTOMER_ID</description>
        <label>SAP Sold To Customer Id</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SVMXC__Access_Hours__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Access Hours</label>
        <referenceTo>BusinessHours</referenceTo>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SVMXC__Business_Hours__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>(Do Not Use)</description>
        <inlineHelpText>(Do Not Use)</inlineHelpText>
        <label>Business Hours (Do Not Use)</label>
        <referenceTo>BusinessHours</referenceTo>
        <relationshipLabel>Accounts (Business Hours)</relationshipLabel>
        <relationshipName>Accounts2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SVMXC__Latitude__c</fullName>
        <description>Address location north or south of the equator.</description>
        <inlineHelpText>Address location north or south of the equator.</inlineHelpText>
        <label>Latitude</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SVMXC__Longitude__c</fullName>
        <description>East west geographic coordinate measurement.</description>
        <inlineHelpText>East west geographic coordinate measurement.</inlineHelpText>
        <label>Longitude</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SVMXC__Preferred_Technician__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Preferred Technician</label>
        <referenceTo>SVMXC__Service_Group_Members__c</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Account</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sales_Id__c</fullName>
        <label>Sales Id</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Organization__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sales Organization</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1 OR 2</booleanFilter>
            <errorMessage>The Sales Organization Chosen DOES NOT Match the Company Code Identified</errorMessage>
            <filterItems>
                <field>$Source.Company_Code__c</field>
                <operation>equals</operation>
                <valueField>Sales_Organization__c.Company_Code__c</valueField>
            </filterItems>
            <filterItems>
                <field>$Profile.Name</field>
                <operation>equals</operation>
                <value>5_1 - Data Steward</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Sales_Organization__c</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Search_Term__c</fullName>
        <label>Search Term</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Select_Primary_Partner__c</fullName>
        <formula>HYPERLINK(&quot;/&quot; + Primary_Partner__c,Primary_Partner__r.Name,&quot;_parent&quot;) &amp;  &quot;  &quot; &amp;  HYPERLINK(&quot;/apex/SelectPrimaryPartner_VP?id=&quot; + Id,&quot;[Select]&quot;,&quot;_parent&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Primary Partner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Send_to_EOD__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Send to EOD</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Ship_To__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Ship/Install</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Site_Territory__c</fullName>
        <description>S_ADDR_ORG_X.ATTRIB_05</description>
        <label>Site Territory</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sold_To_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Should be Disabled During - Data Migration
4/20 We need to Talk about SAP Status Here - JHoskins</description>
        <label>Sold To Account</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>((1 AND 2 AND 3) AND (4 OR 5 OR 6)) OR 7 OR 8 OR 9 OR 10</booleanFilter>
            <errorMessage>The Sold To Account Selected is Invalid. The Sold To Account MUST have the same Parent Account AND  Cannot be THIS Account OR Inactive</errorMessage>
            <filterItems>
                <field>Account.ParentId</field>
                <operation>equals</operation>
                <valueField>$Source.ParentId</valueField>
            </filterItems>
            <filterItems>
                <field>Account.Sold_To__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <filterItems>
                <field>Account.Id</field>
                <operation>notEqual</operation>
                <valueField>$Source.Id</valueField>
            </filterItems>
            <filterItems>
                <field>Account.Address_Status__c</field>
                <operation>equals</operation>
                <value>Active</value>
            </filterItems>
            <filterItems>
                <field>$User.FirstName</field>
                <operation>equals</operation>
                <value>Cadence</value>
            </filterItems>
            <filterItems>
                <field>$User.Is_Data_Steward__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <filterItems>
                <field>$User.LastName</field>
                <operation>equals</operation>
                <value>Migration</value>
            </filterItems>
            <filterItems>
                <field>$Profile.Name</field>
                <operation>equals</operation>
                <value>5_1 - Data Steward, 4_4 - Legal</value>
            </filterItems>
            <filterItems>
                <field>$Source.Apex_Context2__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <filterItems>
                <field>$Source.ByPass_Lookup_Filters__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Sold To Sites</relationshipLabel>
        <relationshipName>Accounts1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sold_To_Customer_Name__c</fullName>
        <formula>Sold_To_Account__r.Customer_Name__c</formula>
        <label>Sold_To_Customer_Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sold_To_SAP_ID__c</fullName>
        <formula>Sold_To_Account__r.SAP_Customer_Id__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sold To SAP ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sold_To_SAP__c</fullName>
        <formula>TEXT( ROUND( VALUE(Sold_To_Account__r.SAP_Customer_Id__c) ,0))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sold To SAP #</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sold_To__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Sold To</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sold_to_edaot_idx__c</fullName>
        <formula>Sold_To_Account__r.eDAoT_Index__c</formula>
        <label>Sold_to_edaot_idx</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>State_Region__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>State/Region</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1 OR 2</booleanFilter>
            <filterItems>
                <field>$Source.Country__c</field>
                <operation>equals</operation>
                <valueField>State__c.Country__c</valueField>
            </filterItems>
            <filterItems>
                <field>$Profile.Name</field>
                <operation>equals</operation>
                <value>5_1 - Data Steward</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>State__c</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>S_ORG_EXT.X_STATUS</description>
        <label>SFDC Status</label>
        <picklist>
            <picklistValues>
                <fullName>Active</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inactive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Prospect</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Support_Center__c</fullName>
        <description>S_ORG_EXT.X_SUPP_REG</description>
        <label>Support Center</label>
        <picklist>
            <picklistValues>
                <fullName>China</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>France</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Germany</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>India</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Israel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Japan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Korea</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>North America</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Russia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Singapore</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Taiwan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>United Kingdom</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>United States</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Support_Geography__c</fullName>
        <description>S_ORG_EXT.X_SUPP_GEOPHY</description>
        <label>Support Geography</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Support_Level__c</fullName>
        <description>S_ORG_EXT.X_SUPP_LVL</description>
        <label>Support Level</label>
        <picklist>
            <picklistValues>
                <fullName>Standard</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Advanced Support</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Internal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Premium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EPP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non EPP</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Support_Type__c</fullName>
        <description>S_ORG_EXT.X_ACC_SUPP_TYPE</description>
        <label>Support Type (B)</label>
        <picklist>
            <picklistValues>
                <fullName>Advanced Support</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Internal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Premium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Standard</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Survey_Preference__c</fullName>
        <description>Used for surveys by Support</description>
        <label>Survey Preference</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Trigger_Bypass__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used to bypass validation rules in trigger.  Not for display to users.</description>
        <inlineHelpText>Used to bypass validation rules in trigger.  Not for display to users.</inlineHelpText>
        <label>Trigger Bypass</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Customer Account Changes</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>VAT_Regn_No__c</fullName>
        <label>VAT Regn No</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Validated_By__c</fullName>
        <label>Validated By</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Validated_Date__c</fullName>
        <label>Validated Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Validation_Override__c</fullName>
        <label>Validation Override</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>WF_Old_Opps_Index__c</fullName>
        <label>WF Old Opps Index</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>eDAoT_Index_Comments__c</fullName>
        <description>putting comments why the eDAoT index has been used.</description>
        <label>eDAoT Index Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>eDAoT_Index__c</fullName>
        <label>eDAoT Index</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>f_Sold_Sh_Bill__c</fullName>
        <formula>if((Sold_To__c =true), &quot;ST&quot;, if(AND((Bill_To__c=true),(Ship_To__c=true)),&quot;SH/BP&quot;, if((Bill_To__c=true),&quot;BP&quot;, if((Ship_To__c=true),&quot;SH&quot;,&quot;&quot;))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Address Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>isMigrated_Record__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Identifies a Migrated Site Record so that We send the Account Number to Downsteam Systems for NET New Account Created in SFDC Regardless of R1 Data Sync Providing a Siebel Row Id</description>
        <label>Migrated Record</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>sendToDwnSys__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Send Downstream</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>sendToSAP__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Send To SAP</label>
        <type>Checkbox</type>
    </fields>
    <listViews>
        <fullName>Account_Administrative_View_Accounts1</fullName>
        <columns>Status__c</columns>
        <columns>PARENT_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>GSS_Index__c</columns>
        <columns>Channel_Type__c</columns>
        <columns>Address__c</columns>
        <columns>City__c</columns>
        <columns>State_Region__c</columns>
        <columns>Country__c</columns>
        <columns>ACCOUNT.TYPE</columns>
        <filterScope>Everything</filterScope>
        <label>Account Administrative View-Accounts</label>
        <language>en_US</language>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Account_Administrative_View_PAccounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>Account_Number__c</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>Status__c</columns>
        <columns>Channel_Type__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Account.Parent_Account</value>
        </filters>
        <filters>
            <field>Parent_Account_Name__c</field>
            <operation>contains</operation>
            <value>Compellent</value>
        </filters>
        <label>Account Administrative View-PAccounts</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Account_GSS_Activity</fullName>
        <columns>Status__c</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>Parent_Account__c</columns>
        <columns>Full_Address__c</columns>
        <columns>City_and_State__c</columns>
        <columns>GSS_Index__c</columns>
        <columns>New_GSS_Index_Ref__c</columns>
        <columns>GSS_Comment__c</columns>
        <columns>GSS_Eff_Date__c</columns>
        <columns>GSS_Status__c</columns>
        <columns>GSS_Status_Press_Release__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>GSS_Index__c</field>
            <operation>contains</operation>
            <value>AXIS</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Active,Prospect</value>
        </filters>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Account.Account</value>
        </filters>
        <label>Account GSS Activity - Stephane</label>
        <language>en_US</language>
        <sharedTo>
            <role>AsiaPac_RVP_Clone</role>
            <role>EMEA_VP_ARM_CSR</role>
            <role>Japan_AD_CCP</role>
            <role>Operations</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Account_GSS_Activity_Ed_Abate</fullName>
        <columns>Status__c</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>Parent_Account__c</columns>
        <columns>Full_Address__c</columns>
        <columns>City_and_State__c</columns>
        <columns>GSS_Index__c</columns>
        <columns>New_GSS_Index_Ref__c</columns>
        <columns>GSS_Comment__c</columns>
        <columns>GSS_Eff_Date__c</columns>
        <columns>GSS_Status__c</columns>
        <columns>GSS_Status_Press_Release__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>GSS_Index__c</field>
            <operation>equals</operation>
        </filters>
        <label>Account GSS Activity-Ed Abate</label>
        <language>en_US</language>
        <sharedTo>
            <role>AsiaPac_RVP_Clone</role>
            <role>EMEA_VP_ARM_CSR</role>
            <role>Japan_AD_CCP</role>
            <role>Operations</role>
        </sharedTo>
    </listViews>
</CustomObject>